infrastructure/istio/data-petewall-net.yaml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: data-petewall-net-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - data.petewall.net
      tls:
        mode: SIMPLE
        credentialName: data-petewall-net-tls
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - data.petewall.net
      tls:
        httpsRedirect: true
